# ners570f22-SpMV

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: new-issue-template.md
.github/workflows/: docs.yml  tests.yml
cmake/: README.md  add_unit_test.cmake
doc/: CMakeLists.txt  README.md  doxy.config  doxy.config.in
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  SpMV.cpp  cmake_install.cmake  example_main  example_main.cpp
src/: CMakeLists.txt  Formatter.hpp  SpMV.hpp  SpMVFactory.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseMatrix_COO.cpp  SparseMatrix_COO.hpp  SparseMatrix_CSR.hpp  SparseMatrix_DEN.cpp  SparseMatrix_DEN.hpp  SparseMatrix_ELL.hpp  SparseMatrix_JDS.cpp  SparseMatrix_JDS.hpp
tests/: CMakeLists.txt  README.md  TestSparseMatrix_COO.cpp  example.cpp  testImportMatrix.cpp  testSpMVFactory.cpp  test_SparseMatrix_COO.cpp  test_SparseMatrix_DEN.cpp  test_SparseMatrix_ELL.cpp  test_SparseMatrix_JDS.cpp  test_sparseMatrix_CSR.hpp  unit_test_framework.hpp
