# Add the directory with sources to the header file include path
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# add_library(SpMV
#             SparseMatrix.cpp
#             SparseMatrix_COO.cpp
#             SparseMatrix_JDS.cpp
#             SparseMatrix_ELL.cpp
#             SparseMatrix_CSR.cpp
#             SparseMatrix_DEN.cpp
# )
